--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@
 version: 2.1
 
 orbs:
-  cypress: cypress-io/cypress@1.29.0
+  cypress: cypress-io/cypress@1
 
 workflows:
   build:
     jobs:
       - cypress/run:
-          yarn: true
+        yarn: true
+        record: true
