--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       steps:
         - checkout
         - run:
-            command: apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+            command: apt-get install xauth xvfb
         - run:
             command: npm install cypress --save-dev
         - run:
