--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ orbs:
 jobs:
   cypress_tests:
       docker:
-        - image: 'node:16-alpine3.11'
+        - image: cypress/base:8
+          environment:
+            TERM: xterm
       steps:
         - checkout
         - run:
@@ -16,6 +18,10 @@ jobs:
         - run:
             name: Run tests
             command: npx cypress run
+        - store_artifacts:
+            path: cypress/videos
+        - store_artifacts:
+            path: cypress/screenshots
 
 workflows:
   build-test:
