--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,10 @@ jobs:
       steps:
         - checkout
         - run:
+            command: pwd
+        - run:
+            command: ls -l
+        - run:
             name: Run tests
             command: npm run cy:run --record --spec "cypress/integration/test_mercado_libre.js"
         - store_artifacts:
