--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,23 @@ jobs:
             command: pwd
         - run:
             command: ls -l
+        - restore_cache:
+            keys:
+              - v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
+              - v2-deps-{{ .Branch }}-
+              - v2-deps-
+        - run: npm ci
+        - save_cache:
+            key: 
+              v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
+            paths:
+              - ~/.npm
+              - ~/.cache
         - run:
             name: Run tests
+            command: npm run tests        
+        - run:
+            name: Run tests1
             command: npm run cy:run --record --spec "cypress/integration/test_mercado_libre.js"
         - store_artifacts:
             path: cypress/videos
