--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
         - image: cypress/base:8
           environment:
             TERM: xterm
+      working_directory: ~/app
+      parallelism: 1
       steps:
         - checkout
         - run:
@@ -21,7 +23,7 @@ jobs:
               - v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
               - v2-deps-{{ .Branch }}-
               - v2-deps-
-        - run: npm ci
+        #- run: npm ci
         - save_cache:
             key: 
               v2-deps-{{ .Branch }}-{{ checksum "package-lock.json" }}
