--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 # This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
-orbs:
-  node: circleci/node@4.7.0
+#orbs:
+#  node: circleci/node@4.7.0
 
 jobs:
   cypress_tests:
@@ -10,7 +10,7 @@ jobs:
         - image: cypress/base:8
           environment:
             TERM: xterm
-      working_directory: ~/app
+      working_directory: ~/project
       parallelism: 1
       steps:
         - checkout
