--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
   node_tests:
       docker:
         - image: 'node:latest'
+          environment:
+              TERM: xterm
+      working_directory: ~/project
+      parallelism: 1
       steps:
         - checkout
         - run:
