--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       parallelism: 1
       steps:
         - checkout
+        - run: apk add xvfb
         - run:
             command: npm install cypress --save-dev
         - run:
