--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       parallelism: 1
       steps:
         - checkout
-        - run: apk add xvfb
+        - run: apk add xvfb xauth libxtst libasound2-dev
         - run:
             command: npm install cypress --save-dev
         - run:
