--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       parallelism: 1
       steps:
         - checkout
-        - run: apk add xvfb xauth libxtst
+        - run: apk add xvfb xauth libxtst libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
         - run:
             command: npm install cypress --save-dev
         - run:
