--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       steps:
         - checkout
         - run: apt-get update #apk add xvfb xauth libxtst
-        - run: apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+        - run: apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
         - run:
             command: npm install cypress --save-dev
         - run:
@@ -48,6 +48,7 @@ jobs:
             paths:
               - ~/.npm
               - ~/.cache
+        - run: apk add --update nodejs npm
         - run:
             command: yarn install
         - run:
