--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       parallelism: 1
       steps:
         - checkout
-        - run: apt-get update #apk add xvfb xauth libxtst
+        - run: apt-get update
         - run: apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
         - run: npm install cypress --save-dev
         - run: npm install
